--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-:root {
-  margin: auto;
-  padding: initial;
+* {
+  margin: 0;
+  padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -11,48 +11,38 @@
   --grey-custom: #262626;
 }
 
-body{
-  background: var(--black-custom);
-  color: var(--white-custom);
+/*--------- Logo & Navigation ---------*/
+header {
+  padding: 3vh;
+  background: black;
 }
 
-#header{
-  width: 100%;
-  height: 100vh;
-  background-image: url(images/background.jpg);
-  background-size: cover;
-  background-position: center;
-}
-.container{
-  padding: 10px 10%;
+img.logo {
+  max-width: 100%;
+  height: auto;
 }
 
-.logo{
-  width: 170px;
-  height: 70px;
-}
-
-nav{
+nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
   list-style: none;
   margin: 10px 20px;
 }
 
-nav ul li a{
+nav ul li a {
   color: var(--white-custom);
   text-decoration: none;
   font-size: 18px;
   position: relative;
 }
 
-nav ul li a::after{
+nav ul li a::after {
   content: '';
   width: 0%;
   height: 3px;
@@ -63,70 +53,93 @@ nav ul li a::after{
   transition: 0.5s;
 }
 
-nav ul li a:hover::after{
+nav ul li a:hover::after {
   width: 100%;
 }
 
-.header-text{
+body {
+  background: var(--black-custom);
+  color: var(--white-custom);
+}
+
+/*-------------- Home --------------*/
+#home {
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/background.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.container {
+  padding: 10px 10%;
+}
+
+.home-text {
   margin-top: 10%;
   font-size: 30px;
 }
 
-.header-text h1{
+.home-text h1 {
   font-size: 60px;
   margin-top: 20px;
 }
 
-.header-text h1 span{
+.home-text h1 span {
   color: var(--blue-custom);
 }
 
 /*-------------- About --------------*/
-#about{
+#about {
   font-size: 30px;
   font-weight: 600;
   padding: 80px 0px;
   color: var(--blue-custom);
 }
 
-.row{
+img.me {
+  max-width: 100%;
+  height: auto;
+}
+
+.row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.about-col-1{
+.about-col-1 {
   flex-basis: 35%
 }
 
-.about-col-1 img{
+.about-col-1 img {
   width: 100%;
   border-radius: 15px;
 }
 
-.about-col-2{
+.about-col-2 {
   flex-basis: 60%
 }
 
-.sub-title{
+.sub-title {
   font-size: 60px;
   font-weight: 600;
   padding: 5px 0px;
   color: var(--blue-custom);
 }
 
-.sub-text{
+.sub-text {
   font-size: 20px;
   font-weight: 400;
   color: var(--white-custom);
 }
 
-.tab-titles{
+.tab-titles {
   display: flex;
   margin: 20px 0 40px;
 }
 
-.tab-links{
+.tab-links {
   margin-right: 50px;
   font-size: 20px;
   font-weight: 500;
@@ -134,7 +147,7 @@ nav ul li a:hover::after{
   position: relative;
 }
 
-.tab-links::after{
+.tab-links::after {
   content: '';
   width: 0%;
   height: 3px;
@@ -145,31 +158,33 @@ nav ul li a:hover::after{
   transition: 0.5s;
 }
 
-.tab-links.active-link::after{
+.tab-links.active-link::after {
   width: 50%;
 }
 
-.tab-contents ul li{
+.tab-contents ul li {
   list-style: none;
   margin: 10px 0;
   color: var(--blue-custom);
 }
 
-.tab-contents ul li span{
+.tab-contents ul li span {
+  color: none;
   font-size: 20px;
   color: var(--blue-custom);
 }
-.tab-contents{
+
+.tab-contents {
   display: none;
 }
 
-.tab-contents.active-tab{
+.tab-contents.active-tab {
   display: block;
 }
 
 /*-------------- Contact --------------*/
 
-.contact-left{
+.contact-left {
   flex-basis: 35%;
 }
 
@@ -177,21 +192,22 @@ nav ul li a:hover::after{
   margin-top: 25px;
 }
 
-.contact-left p i{
+.contact-left p i {
   color: var(--blue-custom);
   margin-right: 14px;
   font-size: 25px;
 }
 
-.contact-right{
+.contact-right {
   flex-basis: 60%;
 }
 
-.contact-right form{
+.contact-right form {
   width: 100%;
 }
 
-form input, form textarea{
+form input,
+form textarea {
   width: 100%;
   border: 0;
   outline: none;
@@ -203,11 +219,11 @@ form input, form textarea{
   border-radius: 6px;
 }
 
-.othet-things{
+.othet-things {
   margin-top: 25px;
 }
 
-.other-things a{
+.other-things a {
   text-decoration: none;
   font-size: 28px;
   margin-top: 30px;
@@ -217,12 +233,12 @@ form input, form textarea{
   transition: transform 0.5s;
 }
 
-.other-things a:hover{
+.other-things a:hover {
   color: var(--blue-custom);
   transform: translateY(-3px);
 }
 
-.the-buttons{
+.the-buttons {
   display: block;
   margin: 50px auto;
   width: fit-content;
@@ -235,11 +251,11 @@ form input, form textarea{
   transition: background-color 0.5s;
 }
 
-.the-buttons:hover{
+.the-buttons:hover {
   background-color: var(--blue-custom);
 }
 
-.the-buttons.subm-btn{
+.the-buttons.subm-btn {
   display: inline-block;
   padding: 14px 60px;
   font-size: 18px;
@@ -247,7 +263,8 @@ form input, form textarea{
   cursor: pointer;
 }
 
-.copyright{
+/*-------------- Footer--------------*/
+.copyright {
   width: 100%;
   text-align: center;
   padding: 10px 0;
@@ -256,39 +273,39 @@ form input, form textarea{
   margin-top: 20px;
 }
 
-.copyright i{
+.copyright i {
   color: var(--blue-custom);
 }
+
+/*-------------- Tablet View --------------*/
+@media only screen and (max-width: 1000px) {
+  #home {
+    background-image: url(images/mobile-background.jpg);
+  }
+}
+
 /*-------------- Mobile View --------------*/
-nav .m-icon{
+nav .m-icon {
   display: none;
 }
 
-@media only screen and (max-width: 600px){
-  #header{
-    background-image: url(images/mobile-background.jpg);
-  }
-
-  .logo{
-    max-width: 100%;
+@media only screen and (max-width: 600px) {
+  img.logo {
+    max-width: 50%;
     height: auto;
   }
 
-  .header-text{
-    margin-top: 10%;
-    margin-left: 10%;
-    font-size: 14px;
-  }
-  .header-text h1{
-    font-size: 30px;
-    margin-top: 5px;
+  img.me {
+    max-width: 50%;
+    height: auto;
   }
 
-  nav .m-icon{
+  nav .m-icon {
     display: block;
     font-size: 20px;
   }
-  nav ul{
+
+  nav ul {
     background: var(--blue-custom);
     position: fixed;
     top: 0;
@@ -299,36 +316,62 @@ nav .m-icon{
     z-index: 2;
     transition: right 0.5s;
   }
-  nav ul li{
+
+  nav ul li {
     display: block;
     margin: 20px;
   }
-  nav ul .m-icon{
+
+  nav ul .m-icon {
     position: absolute;
     top: 20px;
     left: 20px;
     cursor: pointer;
   }
-  .sub-title{
-    font-size: 40px;
+
+  #home {
+    background-image: url(images/mobile-background.jpg);
   }
-  .about-col-1, .about-col-2{
-    flex-basis: 100%;
-  }
-  .about-col-1{
-    margin-bottom: 30px;
-  }
-  .about-col-2{
+
+  .home-text {
+    margin-top: 5%;
+    margin-left: 5%;
     font-size: 14px;
   }
-  .tab-links{
+
+  .home-text h1 {
+    font-size: 30px;
+    margin-top: 5px;
+  }
+
+  .sub-title {
+    font-size: 40px;
+  }
+
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
+
+  .about-col-2 {
+    font-size: 14px;
+  }
+
+  .tab-links {
     font-size: 16px;
     margin-right: 20px;
   }
-  .contact-right, .contact-left{
+
+  .contact-right,
+  .contact-left {
     flex-basis: 100%;
   }
-  .copyright{
+
+  .copyright {
     font-size: 14px;
   }
 }
